fix spacing

--- a/app/frontend/src/components/Brackets.css
+++ b/app/frontend/src/components/Brackets.css
@@ -3,7 +3,7 @@
 }
 
 .bracket-list {
-  margin-top: 48px;
+  margin-top: 36px;
   display: flex;
   flex-direction: column;
   gap: 16px;
@@ -15,7 +15,7 @@
 }
 
 .category-list {
-  margin-top: 36px;
+  margin-top: 24px;
   display: flex;
   flex-direction: column;
   gap: 16px;
